--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+header{
+    height: 100vh;
+    background-image: url(/public/assets/images/hero-01.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+}
+nav{
+    z-index: 99;
+}
+.btn-warning{
+    background-color: #f7b40c !important;
+}
+.text-warning{
+    color: #f7b40c !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.fontSize60{
+    font-size: 60px;
 }
+.fontSize17{
+    font-size: 17px;
+}
+.fontSize18{
+    font-size: 18px;
+}
+a{
+    text-decoration: none;
+    color: #1b1e1f;
+}
+@media (max-width: 700px) { 
+    .fontSize60{
+        font-size: 40px;
+    }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+    header{
+        height: 120vh;
+    }
+    .navbar-collapse{
+        background-color: white !important;
+        padding: 5px 0px 15px 20px;
+        box-shadow: 0 0 5rem rgba(99, 99, 99, 0.416);
+        border-radius: 10px;
+    }
+ }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+ 
