--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,7 +1,24 @@
 footer{
-    background-color: #f1f1f1;
+    background: #0d1824;
+    position: relative;
+    z-index: 0;
+    overflow: hidden;
+
 }
-footer Link, footer p{
+footer:after {
+    content: '';
+    position: absolute;
+    top: -300px;
+    left: -100px;
+    width: 800px;
+    height: 800px;
+    background: url(/public/assets/images/blob-shape.svg);
+    background-position: center;
+    background-size: cover;
+    z-index: -1;
+    opacity: .05;
+}
+footer Link, footer p, footer .text{
     color: #5e6d88;
 }
 li{
