--- a/src/Pages/Dashboard/Aside/Aside.css
+++ b/src/Pages/Dashboard/Aside/Aside.css
@@ -12,7 +12,14 @@ aside img {
     font-size: 17px;
     font-weight: 550;
 }
-.dash_item:hover {
+.dash_menu{
+    transition: .5s;
+    padding: 12px 0;
+ }
+.dash_menu:hover .dash_item{
     color: #f7b40c !important;
     transform: translateX(8px);
+ }
+ .dash_menu:hover {
+    background-color: #f3f5f8;
  }
