--- a/src/index.css
+++ b/src/index.css
@@ -27,11 +27,11 @@ code {
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: #f7b40c; 
   border-radius: 20px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: #e1a100; 
 }
