--- a/src/Pages/Details/Details.css
+++ b/src/Pages/Details/Details.css
@@ -59,3 +59,11 @@
     height: 100%;
     object-fit: cover;
   }
+ 
+  .swiper-button-next:after, .swiper-button-prev:after {
+    color: #f7b40c;
+
+}
+.phone{
+  letter-spacing: 1.2px
+}
