--- a/src/Components/Paginationn/Paginationn.css
+++ b/src/Components/Paginationn/Paginationn.css
@@ -6,4 +6,5 @@
     z-index: 3;
     color: black !important;
     background-color:#f7b40c !important;
+    border: 1px solid #aeaeae !important;
 }
