--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,7 @@ a{
     }
  }
 
+
  .card_contact{
    transition: .6s;
  }
@@ -76,3 +77,17 @@ a{
  .height_100{
     height: 100%;
  }
+ .page404{
+    height: 100vh;
+}
+.search_select{
+    width: 10% !important;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color:#212529;
+    background-clip: padding-box;
+    border: 1px solid #dee2e6;
+    border-radius: 0.375rem;
+}
