--- a/src/Components/Paginationn/Paginationn.css
+++ b/src/Components/Paginationn/Paginationn.css
@@ -8,3 +8,6 @@
     background-color:#f7b40c !important;
     border: 1px solid #aeaeae !important;
 }
+.myPagination{
+    background-color: transparent !important;
+}
