--- a/src/Pages/Authentication/Register/Register.css
+++ b/src/Pages/Authentication/Register/Register.css
@@ -1,5 +1,6 @@
-.message {
-    font-size: 1.2em;
-    text-align: center;
-    color: #e60000;
-  }
+/* .myLink{
+    color: #f7b40c !important;
+} */
+:root, [data-bs-theme=light]{
+    --bs-link-color: #f7b40c !important; 
+}
